# com-test

./: Cargo.toml
crates/com-bridge-node/: Cargo.toml  package.json
crates/com-cli/: Cargo.toml
crates/com-cli/src/: main.rs  state.rs
crates/com-cli/src/commands/: excel.rs  hwp.rs  mod.rs  raw.rs
crates/com-core/: Cargo.toml
crates/excel-bridge/: Cargo.toml
crates/hwp-bridge/: Cargo.toml
crates/hwp-bridge/examples/: hwp_api_dump.rs  hwp_detect.rs  hwp_hello.rs  hwp_hparamset_test.rs  hwp_hps_inspect.rs  hwp_setpos_debug.rs  hwp_step00.rs
crates/hwp-bridge/src/: lib.rs
data/: testdoc.hwpx  testdoc.xml  testdoc.xsl  표색깔.hwpx
docs/: integration-guide.md
docs/analysis/: hwp-enums.md  (+6 more)
electron/: package-lock.json  package.json  test-autocorrect.js  test-autocorrect2-auto.js  test-autocorrect2.js  test-autocorrect3-auto.js  test-autocorrect4-auto.js  test-autocorrect5-auto.js  test-autocorrect6-auto.js  test-autocorrect7-auto.js  test-hparamset.js  test-linespacing.js  test-open.js  test-pos-dynamic.js  test-pos-offset.js  test-pos-offset2.js  test-pos-variant.js  test-save.js  test-setpos-fix.js  test-step01.js  test-step02-auto.js  test-step02-debug.js  test-step02-debug2.js  test-step02.js  test-step03-auto.js  test-step03-debug.js  test-step03-debug2.js  test-step03.js  test-step04-auto.js  test-step04-debug.js  test-step05-auto.js  test-step05-debug.js  test-step05-debug2.js  test-step05-show.js  test-step06-auto.js  test-step06-auto2.js  test-step07-auto.js  test-step07-cellcolor-fix.js  test-step07-cellcolor-fix2.js  test-step07-cellcolor-isolate.js  (+18 more)
(+70 files in other folders)
