[workspace]
resolver = "2"
members = [
    "crates/com-core",
    "crates/excel-bridge",
    "crates/hwp-bridge",
    "crates/com-cli",
    "crates/com-bridge-node",
]

[workspace.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Foundation",
] }
