[package]
name = "hwp-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
com-core = { path = "../com-core" }
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Registry",
    "Win32_Foundation",
] }
